--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.20",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "nodemailer": "^5.1.1",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "shortid": "^2.2.16"
   }
 }
